--- a/package.json
+++ b/package.json
@@ -5,14 +5,23 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npx dotenv -e .env.development node index.js",
+    "start:dev": "npx dotenv -e .env.development nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.3.1",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "prisma": "^5.3.1"
+  },
+  "devDependencies": {
+    "dotenv-cli": "^7.3.0"
   }
 }
