changed index to server

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx dotenv -e .env.development node index.js",
-    "start:dev": "npx dotenv -e .env.development nodemon index.js"
+    "start": "npx dotenv -e .env.development node server.js",
+    "start:dev": "npx dotenv -e .env.development nodemon server.js"
   },
   "keywords": [],
   "author": "",
