seller_edit_page

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,10 @@ services:
     image: postgres:14.1-alpine
     restart: always
     environment:
-      - POSTGRES_USER
-      - POSTGRES_PASSWORD
-      - POSTGRES_DB
+      - POSTGRES_USER =services
+      - POSTGRES_PASSWORD =services
+      - POSTGRES_DB =services-marketplace
     ports:
-      - "${POSTGRES_PORT}:5432"
+      - '5443:5432'
     volumes:
       - ./db:/var/lib/postgresql/data
